Home Page bottom 4 banners text alignment fixed

--- a/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/bigmarket/web/css/source/layout/_homestore.less
@@ -321,6 +321,23 @@
   }
 }
 
+.cdz-products-list {
+    .product-item {
+    .product-item-name {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+    .product-item-info {
+      border: 0;
+      &:hover {
+        .abs-boxshadow(none);
+      }
+    }
+
+  }
+
+}
 .products-list,
 .products-grid {
   .qs-button-icon {
